# miva-lang

./: .gitignore  .nightshift-run.sh  .nightshift-toml-yaml.md  README.md  build.sh  justfile  miva.toml  test_dep.miva
.qoder/: settings.local.json
docs/: ERROR_CODES.md  core-principles.md  generics.md  mvm-backend-debug.md  mvm-unsafe-libhost-plan.md  std-option-progress.md  std-vec-progress.md
lib/: ast.ml  codegen.ml  dependency_graph.ml  dune  env.ml  global.ml  lexer.mll  macro_expand.ml  parse.ml  parser.mly  semantic.ml  symbol_table.ml  symbol_table.mli  tomler.ml  typegen.ml  util.ml  warnings.ml  wrapper.ml
log/: v0.0.4-log.md  v0.0.6-log.md
miva/: .gitignore  Cargo.toml  build.sh
miva-frontend-rs/: Cargo.toml  build.rs  build.sh  run_example.sh  test.sh
miva-verify/: Cargo.toml
miva-vm/: Cargo.toml
miva-vm/src/: host.rs  lib.rs  main.rs  opcode.rs  toml.rs  value.rs  vm.rs  xml.rs  yaml.rs
miva-vm/src/jit/: mod.rs  opcodes.rs
miva/src/: ast.rs  codegen.rs  config.rs  error.rs  json_ast.rs  macro_expand.rs  magical.rs  main.rs  semantic.rs  symbol_table.rs  typecheck.rs  warning.rs
miva/src/codegen/: cxx.rs  cxx_ir.rs  llvm.rs  mod.rs  mvm.rs
miva/src/commands/: build.rs  clean.rs  color.rs  dep.rs  dependency_graph.rs  env.rs  frontend.rs  get_cmd.rs  init_cmd.rs  lock.rs  mod.rs  reinit_cmd.rs  run.rs  sin_build.rs  sin_run.rs  test_cmd.rs
project/: Log.md
releases/: miva-0.0.4
stdlib/: mvp_builtin.h  mvp_test.h
tests/: run_tests.sh  test_arithmetic.miva  test_for.miva  test_functions.miva  test_hello.miva
util/: mvp_builtin.h
(+69 files in other folders)
