[package]
name = "miva"
version = "0.1.1"
edition = "2021"
description = "The Miva programming language compiler"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
miva-vm = { path = "../miva-vm" }
